--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,23 +15,23 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 20.0;
+corner-radius = 15;
 rounded-corners-exclude = [
-  #"window_type = 'normal'",
-  "class_g = 'awesome'",
-  "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  "class_g = 'kitty'",
+  # #"window_type = 'normal'",
+  # "class_g = 'awesome'",
+  # "class_g = 'URxvt'",
+  # "class_g = 'XTerm'",
+  # "class_g = 'kitty",
   # "class_g = 'Alacritty'",
-  "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
+  # "class_g = 'Polybar'",
+  # "class_g = 'code-oss'",
   # "class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
+  # "class_g = 'firefox'",
   # "class_g = 'Thunderbird'"
 ];
 round-borders = 1;
 round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
+  # "class_g = 'TelegramDesktop'",
 ];
 
 #################################
@@ -163,7 +163,7 @@ inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+frame-opacity = 0.4;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0 
@@ -206,17 +206,17 @@ focus-exclude = [
 opacity-rule = [
   "80:class_g     = 'Bar'",             # lemonbar
   "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
+  # "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
   "100:class_g    = 'Alacritty'",
   "80:class_g     = 'Polybar'",
-  "100:class_g    = 'code-oss'",
-  "100:class_g    = 'Meld'",
+  # "100:class_g    = 'code-oss'",
+  # "100:class_g    = 'Meld'",
   # "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
-  "100:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'"
+  # "90:class_g     = 'Joplin'",
+  # "100:class_g    = 'firefox'",
+  # "100:class_g    = 'Thunderbird'"
 ];
 
 
@@ -260,7 +260,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "kawase";
   #method = "kernel";
-  strength = 2;
+  strength = 4;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
