--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -18,8 +18,6 @@ secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 underline = #ff80bf
-chargin = #50fa7b
-dischargin = #a11d33
 
 [bar/top]
 width = 60%
@@ -142,7 +140,7 @@ battery = BAT1
 adapter = ACAD
 time-format = %H:%M
 format-charging = <animation-charging>  <label-charging>
-format-charging-foreground = ${colors.chargin}
+format-charging-foreground = ${colors.primary}
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-foreground = ${colors.primary}
 label-charging = %percentage%%
