feat(polybar): add systray icons

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,21 +20,21 @@ disabled = #707880
 underline = #ff80bf
 
 [bar/top]
-width = 60%
-height = 24pt
+width = 65%
+height = 23pt
 radius = 10
 
-offset-x = 20%
+offset-x = 16%
 offset-y = 0
 
-; dpi = 96
+dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 2pt
 
-border-size = 4pt
+border-size = 0
 border-color = #00000000
 
 padding-left = 0
@@ -49,18 +49,19 @@ font-0 = JetBrains Mono;2
 font-1 = Mononoki Nerd Font:size=19;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio memory cpu network battery date
+modules-right = pulseaudio memory cpu battery date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
+tray-position = right
+tray-background = ${colors.background}
+tray-maxsize = 21
 
 ; wm-restack = generic
 wm-restack = bspwm
-; wm-restack = i3
 
 ; override-redirect = true
 
@@ -121,18 +122,18 @@ format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
-[module/network]
-type = internal/network
-interface = wlp2s0
-interval = 1.0
-accumulate-stats = true
-unknown-as-up = true
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-connected = "直 "
-label-connected-foreground = ${colors.primary}
-label-disconnected = "睊 "
-label-disconnected-foreground = ${colors.primary}
+; [module/network]
+; type = internal/network
+; interface = wlp2s0
+; interval = 1.0
+; accumulate-stats = true
+; unknown-as-up = true
+; format-connected = <label-connected>
+; format-disconnected = <label-disconnected>
+; label-connected = "直 "
+; label-connected-foreground = ${colors.primary}
+; label-disconnected = "睊 "
+; label-disconnected-foreground = ${colors.primary}
 
 [module/battery]
 type = internal/battery
@@ -185,5 +186,3 @@ label-foreground = ${colors.foreground}
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
