chore(redshift): temperature change at night

--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -1,14 +1,14 @@
 [redshift]
-; Set the day and night screen temperatures
-temp-day=5500
-temp-night=3700
-; enabling smooth transition
+temp-day=5800
+temp-night=3500
+brightness-day=1
+brightness-night=0.72
+dawn-time=5:00-6:00
+dusk-time=19:30-20:00
+gamma=0.750:0.750:0.750
 transition=1
 adjustment-method=randr
-; Now specify the location manually
 location-provider=manual
 [manual]
-; use the Internet to get your latitudes and longitudes
-; below is the latitude and longitude for Delhi
 lat=0.526596
 lon=-76.486178
