chore(redshift): temperature change at night

--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -1,10 +1,8 @@
 [redshift]
 temp-day=5800
 temp-night=3500
-brightness-day=1
-brightness-night=0.72
-dawn-time=5:00-6:00
-dusk-time=19:30-20:00
+/* dawn-time=5:00-6:00 */
+/* dusk-time=19:30-20:00 */
 gamma=0.750:0.750:0.750
 transition=1
 adjustment-method=randr
