chore(polybar): change config for systray icons

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -49,7 +49,7 @@ font-0 = JetBrains Mono;2
 font-1 = Mononoki Nerd Font:size=19;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio memory cpu battery date
+modules-right = pulseaudio memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -58,7 +58,10 @@ enable-ipc = true
 
 tray-position = right
 tray-background = ${colors.background}
-tray-maxsize = 21
+tray-maxsize = 24
+tray-padding = 4
+tray-offset-x = 0
+tray-offset-y = -2
 
 ; wm-restack = generic
 wm-restack = bspwm
@@ -135,41 +138,41 @@ label = %percentage:2%%
 ; label-disconnected = "睊 "
 ; label-disconnected-foreground = ${colors.primary}
 
-[module/battery]
-type = internal/battery
-battery = BAT1
-adapter = ACAD
-time-format = %H:%M
-format-charging = <animation-charging>  <label-charging>
-format-charging-foreground = ${colors.primary}
-format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-foreground = ${colors.primary}
-label-charging = %percentage%%
-label-charging-foreground = ${colors.foreground}
-label-discharging-foreground = ${colors.foreground}
-label-discharging = %percentage%%
-label-full = 
-label-low = 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-6 = 
-ramp-capacity-7 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
-bar-capacity-width = 10
-animation-charging-0 =  
-animation-charging-1 =  
-animation-charging-2 =  
-animation-charging-3 =  
-animation-charging-4 =  
-animation-charging-framerate = 750
-animation-low-0 = !
-animation-low-1 = 
-animation-low-framerate = 200
+; [module/battery]
+; type = internal/battery
+; battery = BAT1
+; adapter = ACAD
+; time-format = %H:%M
+; format-charging = <animation-charging>  <label-charging>
+; format-charging-foreground = ${colors.primary}
+; format-discharging = <ramp-capacity> <label-discharging>
+; format-discharging-foreground = ${colors.primary}
+; label-charging = %percentage%%
+; label-charging-foreground = ${colors.foreground}
+; label-discharging-foreground = ${colors.foreground}
+; label-discharging = %percentage%%
+; label-full = 
+; label-low = 
+; ramp-capacity-0 = 
+; ramp-capacity-1 = 
+; ramp-capacity-2 = 
+; ramp-capacity-3 = 
+; ramp-capacity-4 = 
+; ramp-capacity-5 = 
+; ramp-capacity-6 = 
+; ramp-capacity-7 = 
+; ramp-capacity-8 = 
+; ramp-capacity-9 = 
+; bar-capacity-width = 10
+; animation-charging-0 =  
+; animation-charging-1 =  
+; animation-charging-2 =  
+; animation-charging-3 =  
+; animation-charging-4 =  
+; animation-charging-framerate = 750
+; animation-low-0 = !
+; animation-low-1 = 
+; animation-low-framerate = 200
 
 [module/date]
 type = internal/date
