--- a/.config/nvim/snippets/package.json
+++ b/.config/nvim/snippets/package.json
@@ -7,7 +7,13 @@
 					"html"
 				],
 				"path": "./html.json"
-			}
+			},
+      {
+        "language": [
+          "css"
+        ],
+        "path": "./css.json"
+      }
 		]
 	}
 }
