chore: change font

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,8 +27,6 @@ radius = 10
 offset-x = 16%
 offset-y = 0
 
-dpi = 96
-
 background = ${colors.background}
 foreground = ${colors.foreground}
 
@@ -37,18 +35,19 @@ line-size = 2pt
 border-size = 0
 border-color = #00000000
 
-padding-left = 0
-padding-right = 1
+padding-left = 4
+padding-right = 4
 
 module-margin = 1
 
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrains Mono;2
-font-1 = Mononoki Nerd Font:size=19;2
+font-0 = SF Pro Display;2
+font-1 = Hack NF:size=19;2
 
-modules-left = xworkspaces xwindow
+modules-left = xworkspaces 
+modules-center = xwindow
 modules-right = pulseaudio memory cpu date
 
 cursor-click = pointer
@@ -74,19 +73,19 @@ type = internal/xworkspaces
 label-active = %name%
 label-active-foreground = ${colors.underline}
 label-active-background = ${colors.background-alt}
-label-active-padding = 2
+label-active-padding = 4
 
 label-occupied = %name%
 label-occupied-foreground = "#8be9fd"
-label-occupied-padding = 2
+label-occupied-padding = 4
 
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 4
 
 label-empty = %name%
 label-empty-foreground = ${colors.disabled}
-label-empty-padding = 2
+label-empty-padding = 4
 
 [module/xwindow]
 type = internal/xwindow
@@ -97,88 +96,41 @@ label-maxlen = 26
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "墳 "
+format-volume-prefix = "墳   "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = "ﱝ  "
+label-muted = "ﱝ    "
 label-muted-foreground = ${colors.disabled}
 
-label-indicator-padding = 2
+label-indicator-padding = 4
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
 
+format-pulseaudo-padding = 4
+
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = "   "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = "   "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
-
-; [module/network]
-; type = internal/network
-; interface = wlp2s0
-; interval = 1.0
-; accumulate-stats = true
-; unknown-as-up = true
-; format-connected = <label-connected>
-; format-disconnected = <label-disconnected>
-; label-connected = "直 "
-; label-connected-foreground = ${colors.primary}
-; label-disconnected = "睊 "
-; label-disconnected-foreground = ${colors.primary}
-
-; [module/battery]
-; type = internal/battery
-; battery = BAT1
-; adapter = ACAD
-; time-format = %H:%M
-; format-charging = <animation-charging>  <label-charging>
-; format-charging-foreground = ${colors.primary}
-; format-discharging = <ramp-capacity> <label-discharging>
-; format-discharging-foreground = ${colors.primary}
-; label-charging = %percentage%%
-; label-charging-foreground = ${colors.foreground}
-; label-discharging-foreground = ${colors.foreground}
-; label-discharging = %percentage%%
-; label-full = 
-; label-low = 
-; ramp-capacity-0 = 
-; ramp-capacity-1 = 
-; ramp-capacity-2 = 
-; ramp-capacity-3 = 
-; ramp-capacity-4 = 
-; ramp-capacity-5 = 
-; ramp-capacity-6 = 
-; ramp-capacity-7 = 
-; ramp-capacity-8 = 
-; ramp-capacity-9 = 
-; bar-capacity-width = 10
-; animation-charging-0 =  
-; animation-charging-1 =  
-; animation-charging-2 =  
-; animation-charging-3 =  
-; animation-charging-4 =  
-; animation-charging-framerate = 750
-; animation-low-0 = !
-; animation-low-1 = 
-; animation-low-framerate = 200
 
 [module/date]
 type = internal/date
 interval = 1.0
 
-format-prefix = "  "
+format-prefix = "    "
 format-prefix-foreground = ${colors.primary}
 date = %I:%M %p
 date-alt = %d-%m-%Y
