chore: update config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,6 @@
-#set -g default-terminal "tmux-256color"
 set -g default-terminal "xterm-256color"
-#set -ga terminal-overrides ",*256col*:Tc"
 set -ga terminal-overrides ",xterm-256color:Tc"
+
 # action key
 unbind C-b
 set-option -g prefix C-t
@@ -81,8 +80,4 @@ set-window-option -g clock-mode-colour colour64 #green
 set -g set-titles on
 set -g set-titles-string "#T"
 
-# import
-if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
-
-source ~/.config/tmux/statusline.conf
-source ~/.config/tmux/utility.conf
+source ~/.config/tmux/themes/statusline-solarized.conf
