chore: update config of tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,15 +3,18 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 
 # action key
 unbind C-b
-set-option -g prefix C-t
-set-option -g repeat-time 0
-set-option -g focus-events on
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+unbind %
+bind | split-window -h
+
+unbind '"'
+bind - split-window -v
 
 #### Key bindings
-
 set-window-option -g mode-keys vi
 
-#bind t send-key C-t
 # Reload settings
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 # Open current directory
@@ -38,7 +41,8 @@ bind -r C-l resize-pane -R 5
 
 set-option -g status-justify "left"
 #set-option utf8-default on
-#set-option -g mouse-select-pane
+# set-option -g mouse-select-pane
+set -g mouse on
 set-window-option -g mode-keys vi
 #set-window-option -g utf8 on
 # look'n feel
