chore(tmux): add full resize pane map

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -43,6 +43,7 @@ set-option -g status-justify "left"
 #set-option utf8-default on
 # set-option -g mouse-select-pane
 set -g mouse on
+bind -r m resize-pane -Z
 set-window-option -g mode-keys vi
 #set-window-option -g utf8 on
 # look'n feel
