feat(dep): add tmux and gammastep

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,3 +33,7 @@ source = ~/Dotfiles/hypr/conf/misc.conf
 source = ~/Dotfiles/hypr/conf/keybindings.conf
 source = ~/Dotfiles/hypr/conf/windowrules.conf
 source = ~/Dotfiles/hypr/conf/animations1.conf
+
+
+# end line for screen sharing
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
