--- a/hypr/conf/window.conf
+++ b/hypr/conf/window.conf
@@ -6,7 +6,7 @@ general {
     gaps_in = 10
     gaps_out = 0
     border_size = 2
-    col.active_border = $color11
-    col.inactive_border = rgba(ffffffff)
+    col.active_border = rgba(ffffffff)
+    col.inactive_border = $color11
     layout = dwindle
 }
