chore: dunst customization

--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -7,6 +7,7 @@ exec-once = swww init & dunst & gammastep
 # exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = ~/Dotfiles/scripts/lockscreentime.sh
 exec-once = ~/Dotfiles/scripts/update-wall.sh
+exec-once = ~/Dotfiles/scripts/reload_dunst.sh
 exec-once = ~/Dotfiles/hypr/gtk.sh
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = ~/Dotfiles/waybar/launch.sh
