chore: update styles

--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -2,7 +2,7 @@
 # Autostart
 # ----------------------------------------------------- 
 
-exec-once = swww init & dunst & gammastep
+exec-once = swww init & dunst
 # exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = ~/Dotfiles/scripts/lockscreentime.sh
