--- a/hypr/conf/window.conf
+++ b/hypr/conf/window.conf
@@ -3,10 +3,10 @@
 # ----------------------------------------------------- 
 
 general {
-    gaps_in = 10
+    gaps_in = 5
     gaps_out = 0
-    border_size = 2
-    col.active_border = $color4
-    col.inactive_border = $background
+    border_size = 1
+    col.active_border = rgba(00000000)
+    col.inactive_border = $color8
     layout = dwindle
 }
