chore: update colors

--- a/hypr/conf/window.conf
+++ b/hypr/conf/window.conf
@@ -6,7 +6,7 @@ general {
     gaps_in = 5
     gaps_out = 0
     border_size = 1
-    col.active_border = rgba(00000000)
+    col.active_border = $background
     col.inactive_border = $color8
     layout = dwindle
 }
