chore: update waybar

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,7 +9,8 @@ $keyboardlayout = us
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # ----------------------------------------------------- 
 monitor=eDP-1, highres, auto, 1
-monitor=,highres,auto, 2
+# monitor=,highres,auto, 2
+monitor=,1920x1080,auto, 1
 
 # ----------------------------------------------------- 
 # Autostart & Environment
