chore: update config

--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -17,6 +17,7 @@ bind = $mainMod, down, movefocus, d
 bind = $mainMod, R, exec, ~/Dotfiles/scripts/applauncher.sh
 bind = $mainMod, E, exec, ~/Dotfiles/scripts/filemanager.sh
 bind = $mainMod, M, exec, wlogout
+bind = $mainMod, PERIOD, exec, rofi -show emoji -modi emoji
 
 bind = $mainMod SHIFT, S, exec, ~/Dotfiles/scripts/grim.sh
 bind = $mainMod SHIFT, W, exec, ~/Dotfiles/scripts/update-wall.sh
@@ -65,11 +66,3 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
 bind = , XF86AudioLowerVolume, exec, pamixer -d 5
 bind = , XF86AudioMute, exec, pamixer -t
-
-# ----------------------------------------------------- 
-# Passthrough SUPER KEY to Virtual Machine
-# ----------------------------------------------------- 
-bind = $mainMod, P, submap, passthru
-submap = passthru
-bind = SUPER, Escape, submap, reset
-submap = reset
