--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,6 +9,7 @@ $keyboardlayout = us
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # ----------------------------------------------------- 
 monitor=eDP-1, highres, auto, 1
+# monitor=eDP-1, disable
 # monitor=,highres,auto, 2
 monitor=,1920x1080,auto, 1
 
@@ -33,7 +34,7 @@ source = ~/Dotfiles/hypr/conf/layouts.conf
 source = ~/Dotfiles/hypr/conf/misc.conf
 source = ~/Dotfiles/hypr/conf/keybindings.conf
 source = ~/Dotfiles/hypr/conf/windowrules.conf
-source = ~/Dotfiles/hypr/conf/animations1.conf
+source = ~/Dotfiles/hypr/conf/animations.conf
 
 
 # end line for screen sharing
