--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -2,7 +2,7 @@
 # Autostart
 # ----------------------------------------------------- 
 
-exec-once = swww init & dunst
+exec-once = swww init & dunst & blueman-applet
 # exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = ~/Dotfiles/scripts/lockscreentime.sh
@@ -12,3 +12,4 @@ exec-once = ~/Dotfiles/hypr/gtk.sh
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = ~/Dotfiles/waybar/launch.sh
 exec-once = wl-paste --watch cliphist store
+exec-once = xhost +SI:localuser:root
