--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,10 +8,8 @@ $keyboardlayout = us
 # Monitor Setup
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # ----------------------------------------------------- 
-monitor=eDP-1, highres, auto, 1
-# monitor=eDP-1, disable
-# monitor=,highres,auto, 2
-monitor=,1920x1080,auto, 1
+monitor=eDP-1, highres, 0x0, 1
+monitor=HDMI-A-1,1920x1080@120,auto, 1
 
 # ----------------------------------------------------- 
 # Autostart & Environment
