--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -2,7 +2,11 @@
 # Window rules
 # ----------------------------------------------------- 
 
-# windowrule = tile,^(Brave-browser)$
+windowrule = tile,^(Brave-browser)$
 windowrule = tile,^(Chromium)$
 windowrule = float,^(pavucontrol)$
 windowrule = float,^(blueman-manager)$
+windowrule = workspace 2, ^(Brave-browser)$
+windowrule = workspace 2, ^(Chromium)$
+windowrule = workspace 4, ^(discord)$
+windowrule = workspace 6, ^(thunderbird)$
