chore: turn off and turn on when liquid is open o close

--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -66,3 +66,8 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
 bind = , XF86AudioLowerVolume, exec, pamixer -d 5
 bind = , XF86AudioMute, exec, pamixer -t
+
+# trigger when the switch is turning off
+bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, highres, 0x0, 1"
+# trigger when the switch is turning on
+bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
