--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -8,16 +8,13 @@ bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod, C, killactive
 bind = $mainMod, F, fullscreen
 bind = $mainMod, T, togglefloating
-bind = $mainMod, B, exec, chromium
+bind = $mainMod, B, exec, brave
 bind = $mainMod, J, togglesplit
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
 bind = $mainMod, R, exec, ~/Dotfiles/scripts/applauncher.sh
 bind = $mainMod, E, exec, ~/Dotfiles/scripts/filemanager.sh
 bind = $mainMod, M, exec, wlogout
 bind = $mainMod, PERIOD, exec, rofi -show emoji -modi emoji
+bind = $mainMod, L, exec, hyprctl keyword monitor "eDP-1, disable"
 
 bind = $mainMod SHIFT, S, exec, ~/Dotfiles/scripts/grim.sh
 bind = $mainMod SHIFT, W, exec, ~/Dotfiles/scripts/update-wall.sh
@@ -47,8 +44,10 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_down, workspace, +1
 bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, right, workspace, +1
+bind = $mainMod, left, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
