--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -1,5 +1,6 @@
 # ----------------------------------------------------- 
 # Window rules
+# show name with `hyprctl clients` command
 # ----------------------------------------------------- 
 
 windowrule = tile,^(Brave-browser)$
@@ -8,5 +9,8 @@ windowrule = float,^(pavucontrol)$
 windowrule = float,^(blueman-manager)$
 windowrule = workspace 2, ^(Brave-browser)$
 windowrule = workspace 2, ^(Chromium)$
+windowrule = workspace 3, ^(thunar)$
+windowrule = workspace 3, ^(org.gnome.Nautilus)$
 windowrule = workspace 4, ^(discord)$
+windowrule = workspace 5, ^(Spotify)$
 windowrule = workspace 6, ^(thunderbird)$
