chore: add keybindings for toggle workspaces

--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -48,6 +48,7 @@ bind = $mainMod, mouse_down, workspace, +1
 bind = $mainMod, mouse_up, workspace, e-1
 bind = $mainMod, right, workspace, +1
 bind = $mainMod, left, workspace, e-1
+bind = $mainMod, TAB, workspace, previous
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
