--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -11,6 +11,7 @@ windowrule = workspace 2, ^(Brave-browser)$
 windowrule = workspace 2, ^(Chromium)$
 windowrule = workspace 3, ^(thunar)$
 windowrule = workspace 3, ^(org.gnome.Nautilus)$
+windowrule = workspace 3, ^(ResponsivelyApp)$
 windowrule = workspace 4, ^(discord)$
 windowrule = workspace 5, ^(Spotify)$
 windowrule = workspace 6, ^(thunderbird)$
