chore: rename Dotfiles with dot

--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -4,23 +4,23 @@
 
 $mainMod = SUPER
 
-bind = $mainMod, RETURN, exec, alacritty
+bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, C, killactive
 bind = $mainMod, F, fullscreen
 bind = $mainMod, T, togglefloating
-bind = $mainMod, B, exec, brave
+bind = $mainMod, B, exec, firefox
 bind = $mainMod, J, togglesplit
-bind = $mainMod, R, exec, ~/Dotfiles/scripts/applauncher.sh
-bind = $mainMod, E, exec, ~/Dotfiles/scripts/filemanager.sh
+bind = $mainMod, R, exec, ~/dot/scripts/applauncher.sh
+bind = $mainMod, E, exec, ~/dot/scripts/filemanager.sh
 bind = $mainMod, M, exec, wlogout
 bind = $mainMod, PERIOD, exec, rofi -show emoji -modi emoji
 bind = $mainMod, L, exec, hyprctl keyword monitor "eDP-1, disable"
 
-bind = $mainMod SHIFT, S, exec, ~/Dotfiles/scripts/grim.sh
-bind = $mainMod SHIFT, W, exec, ~/Dotfiles/scripts/update-wall.sh
-bind = $mainMod CTRL, W, exec, ~/Dotfiles/scripts/wallpaper-swww.sh
-bind = $mainMod SHIFT, B, exec, ~/Dotfiles/waybar/launch.sh
-bind = $mainMod CTRL, C, exec, ~/Dotfiles/scripts/cliphist.sh
+bind = $mainMod SHIFT, S, exec, ~/dot/scripts/grim.sh
+bind = $mainMod SHIFT, W, exec, ~/dot/scripts/update-wall.sh
+bind = $mainMod CTRL, W, exec, ~/dot/scripts/wallpaper-swww.sh
+bind = $mainMod SHIFT, B, exec, ~/dot/waybar/launch.sh
+bind = $mainMod CTRL, C, exec, ~/dot/scripts/cliphist.sh
 
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
