--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,8 +13,8 @@ monitor=HDMI-A-1,1920x1080@120,auto, 1
 # ----------------------------------------------------- 
 # Autostart & Environment
 # ----------------------------------------------------- 
-source = ~/Dotfiles/hypr/conf/environment.conf
-source = ~/Dotfiles/hypr/conf/autostart.conf
+source = ~/dot/hypr/conf/environment.conf
+source = ~/dot/hypr/conf/autostart.conf
 
 # ----------------------------------------------------- 
 # Load pywal color file
@@ -24,14 +24,14 @@ source = ~/.cache/wal/colors-hyprland.conf
 # ----------------------------------------------------- 
 # Load configuration files
 # ----------------------------------------------------- 
-source = ~/Dotfiles/hypr/conf/keyboard.conf
-source = ~/Dotfiles/hypr/conf/window.conf
-source = ~/Dotfiles/hypr/conf/decoration.conf
-source = ~/Dotfiles/hypr/conf/layouts.conf
-source = ~/Dotfiles/hypr/conf/misc.conf
-source = ~/Dotfiles/hypr/conf/keybindings.conf
-source = ~/Dotfiles/hypr/conf/windowrules.conf
-source = ~/Dotfiles/hypr/conf/animations.conf
+source = ~/dot/hypr/conf/keyboard.conf
+source = ~/dot/hypr/conf/window.conf
+source = ~/dot/hypr/conf/decoration.conf
+source = ~/dot/hypr/conf/layouts.conf
+source = ~/dot/hypr/conf/misc.conf
+source = ~/dot/hypr/conf/keybindings.conf
+source = ~/dot/hypr/conf/windowrules.conf
+source = ~/dot/hypr/conf/animations.conf
 
 
 # end line for screen sharing
