--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -5,11 +5,11 @@
 exec-once = swww init & dunst & blueman-applet & thunderbird
 # exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = ~/Dotfiles/scripts/lockscreentime.sh
-exec-once = ~/Dotfiles/scripts/update-wall.sh
-exec-once = ~/Dotfiles/scripts/reload_dunst.sh
-exec-once = ~/Dotfiles/hypr/gtk.sh
+exec-once = ~/dot/scripts/lockscreentime.sh
+exec-once = ~/dot/scripts/update-wall.sh
+exec-once = ~/dot/scripts/reload_dunst.sh
+exec-once = ~/dot/hypr/gtk.sh
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
-exec-once = ~/Dotfiles/waybar/launch.sh
+exec-once = ~/dot/waybar/launch.sh
 exec-once = wl-paste --watch cliphist store
 exec-once = xhost +SI:localuser:root
