chore: update config

--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -5,11 +5,11 @@
 
 windowrule = tile,^(Brave-browser)$
 windowrule = tile,^(Chromium)$
-windowrule = tile,^(Firefox)$
+windowrule = tile,^(firefox)$
 windowrule = float,^(pavucontrol)$
 windowrule = float,^(blueman-manager)$
 windowrule = workspace 2, ^(Brave-browser)$
-windowrule = workspace 2, ^(Firefox)$
+windowrule = workspace 2, ^(firefox)$
 windowrule = workspace 2, ^(Chromium)$
 windowrule = workspace 3, ^(thunar)$
 windowrule = workspace 3, ^(org.gnome.Nautilus)$
