chore: update config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,1 +1,23 @@
 background_opacity 0.1
+
+# Font
+font_family      CaskaydiaCove Nerd Font
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
+
+font_size 12.0
+disable_ligatures never
+
+# History
+scrollback_lines 100
+
+# Open new window or tab in the same directory
+map ctrl+alt+enter launch --cwd=current
+map ctrl+alt+t new_tab_with_cwd
+
+# Move between panels
+map ctrl+space focus_visible_window
+
+# Zoom current panel
+map ctrl+alt+m toggle_layout stack
