--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,13 +1,38 @@
 background_opacity 0.3
 
 # Font
-font_family      CaskaydiaCove Nerd Font
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      MonaspiceNe Nerd Font Mono
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 font_size 16.0
 disable_ligatures never
 
+confirm_os_window_close 1
+
 # History
 scrollback_lines 100
+
+# Colorscheme solarized-dark
+background              #00141a
+foreground              #839496
+cursor                  #93a1a1
+selection_background    #81908f
+selection_foreground    #002831
+color0                  #073642
+color1                  #dc322f
+color2                  #859900
+color3                  #b58900
+color4                  #268bd2
+color5                  #d33682
+color6                  #2aa198
+color7                  #eee8d5
+color9                  #cb4b16
+color8                  #002b36
+color10                 #586e75
+color11                 #657b83
+color12                 #839496
+color13                 #6c71c4
+color14                 #93a1a1
+color15                 #fdf6e3
