--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -2,14 +2,6 @@
 # Autostart
 # ----------------------------------------------------- 
 
-exec-once = swww init & dunst & blueman-applet & thunderbird
-# exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = ~/dot/scripts/lockscreentime.sh
-exec-once = ~/dot/scripts/update-wall.sh
-exec-once = ~/dot/scripts/reload_dunst.sh
-exec-once = ~/dot/hypr/gtk.sh
-exec-once = hyprctl setcursor Bibata-Modern-Classic 24
-exec-once = ~/dot/waybar/launch.sh
-exec-once = wl-paste --watch cliphist store
+exec-once = swww init & waybar & swaync & discord & slack & clockify
+exec-once = ~/.config/hypr/gtk.sh
 exec-once = xhost +SI:localuser:root
