--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -1,27 +1,37 @@
-# ----------------------------------------------------- 
-# Key bindings
-# ----------------------------------------------------- 
+####################
+### KEYBINDINGSS ###
+####################
 
-$mainMod = SUPER
+# See https://wiki.hyprland.org/Configuring/Keywords/
+$mainMod = SUPER # Sets "Windows" key as main modifier
 
-bind = $mainMod, RETURN, exec, kitty
-bind = $mainMod, C, killactive
-bind = $mainMod, F, fullscreen
-bind = $mainMod, T, togglefloating
-bind = $mainMod, B, exec, firefox
-bind = $mainMod, J, togglesplit
-bind = $mainMod, R, exec, ~/dot/scripts/applauncher.sh
-bind = $mainMod, E, exec, ~/dot/scripts/filemanager.sh
-bind = $mainMod, M, exec, wlogout
-bind = $mainMod, PERIOD, exec, rofi -show emoji -modi emoji
-bind = $mainMod, L, exec, hyprctl keyword monitor "eDP-1, disable"
+# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, C, killactive,
+bind = $mainMod, E, exec, $terminal -e $fileManager
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, R, exec, $menu
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, F, fullscreen, 1
+bind = $mainMod SHIFT, M, exit
+bind = $mainMod, TAB, workspace, previous
+bind = $mainMod SHIFT, <F4>, exec, ~/dot/scripts/grim.sh
 
-bind = $mainMod SHIFT, S, exec, ~/dot/scripts/grim.sh
-bind = $mainMod SHIFT, W, exec, ~/dot/scripts/update-wall.sh
-bind = $mainMod CTRL, W, exec, ~/dot/scripts/wallpaper-swww.sh
-bind = $mainMod SHIFT, B, exec, ~/dot/waybar/launch.sh
-bind = $mainMod CTRL, C, exec, ~/dot/scripts/cliphist.sh
+# Volume
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
+
+# Move focus with mainMod + arrow keys
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
+
+# Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -33,6 +43,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -44,30 +55,14 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-bind = $mainMod, mouse_down, workspace, +1
-bind = $mainMod, mouse_up, workspace, e-1
-bind = $mainMod, right, workspace, +1
-bind = $mainMod, left, workspace, e-1
-bind = $mainMod, TAB, workspace, previous
+# Example special workspace (scratchpad)
+bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
+
+# Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-bind = $mainMod SHIFT, right, resizeactive, 100 0
-bind = $mainMod SHIFT, left, resizeactive, -100 0
-bind = $mainMod SHIFT, up, resizeactive, 0 -100
-bind = $mainMod SHIFT, down, resizeactive, 0 100
-
-# Brightness
-bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
-bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
-
-# Volume
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5
-bind = , XF86AudioMute, exec, pamixer -t
-
-# trigger when the switch is turning off
-bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, highres, 0x0, 1"
-# trigger when the switch is turning on
-bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
