--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,38 +1,8 @@
-# ----------------------------------------------------- 
-# Keyboard Layout
-# ----------------------------------------------------- 
-$keyboardlayout = us
-
-# ----------------------------------------------------- 
-# Monitor Setup
-# See https://wiki.hyprland.org/Configuring/Monitors/
-# ----------------------------------------------------- 
-monitor=eDP-1, highres, 0x0, 1
-monitor=HDMI-A-1,1920x1080@120,auto, 1
-
-# ----------------------------------------------------- 
-# Autostart & Environment
-# ----------------------------------------------------- 
-source = ~/dot/hypr/conf/environment.conf
-source = ~/dot/hypr/conf/autostart.conf
-
-# ----------------------------------------------------- 
-# Load pywal color file
-# ----------------------------------------------------- 
-source = ~/.cache/wal/colors-hyprland.conf
-
-# ----------------------------------------------------- 
-# Load configuration files
-# ----------------------------------------------------- 
-source = ~/dot/hypr/conf/keyboard.conf
-source = ~/dot/hypr/conf/window.conf
-source = ~/dot/hypr/conf/decoration.conf
-source = ~/dot/hypr/conf/layouts.conf
-source = ~/dot/hypr/conf/misc.conf
-source = ~/dot/hypr/conf/keybindings.conf
-source = ~/dot/hypr/conf/windowrules.conf
-source = ~/dot/hypr/conf/animations.conf
-
-
-# end line for screen sharing
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+source = ~/.config/hypr/conf/monitors.conf
+source = ~/.config/hypr/conf/my-programs.conf
+source = ~/.config/hypr/conf/autostart.conf
+source = ~/.config/hypr/conf/env.conf
+source = ~/.config/hypr/conf/loock.conf
+source = ~/.config/hypr/conf/input.conf
+source = ~/.config/hypr/conf/keybindings.conf
+source = ~/.config/hypr/conf/rules.conf
