chore(hypr): add absolute path to configs

--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -3,5 +3,5 @@
 # ----------------------------------------------------- 
 
 exec-once = swww init & waybar & swaync & discord & slack & clockify
-exec-once = ~/.config/hypr/gtk.sh
+exec-once = ~/dot/.config/hypr/gtk.sh
 exec-once = xhost +SI:localuser:root
