--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,8 @@
-source = ~/.config/hypr/conf/monitors.conf
-source = ~/.config/hypr/conf/my-programs.conf
-source = ~/.config/hypr/conf/autostart.conf
-source = ~/.config/hypr/conf/env.conf
-source = ~/.config/hypr/conf/loock.conf
-source = ~/.config/hypr/conf/input.conf
-source = ~/.config/hypr/conf/keybindings.conf
-source = ~/.config/hypr/conf/rules.conf
+source = ~/dot/.config/hypr/conf/monitors.conf
+source = ~/dot/.config/hypr/conf/my-programs.conf
+source = ~/dot/.config/hypr/conf/autostart.conf
+source = ~/dot/.config/hypr/conf/env.conf
+source = ~/dot/.config/hypr/conf/loock.conf
+source = ~/dot/.config/hypr/conf/input.conf
+source = ~/dot/.config/hypr/conf/keybindings.conf
+source = ~/dot/.config/hypr/conf/rules.conf
