chore(hypr): change keybinding for screenshots

--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -17,7 +17,7 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, M, exit
 bind = $mainMod, TAB, workspace, previous
-bind = $mainMod SHIFT, <F4>, exec, ~/dot/.config/scripts/hypr/grim.sh
+bind = $mainMod SHIFT, F4, exec, ~/dot/.config/scripts/hypr/grim.sh
 
 # Volume
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
