chore(hypr): change default browser to chromium

--- a/.config/hypr/conf/my-programs.conf
+++ b/.config/hypr/conf/my-programs.conf
@@ -9,4 +9,4 @@ $terminal = kitty
 $fileManager = yazi
 # $menu = tofi-drun | xargs hyprctl dispatch exec --
 $menu = tofi-drun --drun-launch=true
-$browser = brave
+$browser = chromium
