--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 background_opacity 0.3
 
 # Font
-font_family      MonaspiceNe Nerd Font Mono
+font_family      CaskaydiaCove Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
