chore(hypr): add gammastep to autostart

--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -2,6 +2,6 @@
 # Autostart
 # ----------------------------------------------------- 
 
-exec-once = swww init & waybar & swaync
+exec-once = swww init & waybar & swaync & gammastep
 exec-once = ~/dot/.config/hypr/gtk.sh
 exec-once = xhost +SI:localuser:root
