chore(refind): remove any lines

--- a/custom/refind/refind.conf
+++ b/custom/refind/refind.conf
@@ -10,14 +10,8 @@ menuentry "Arch Linux" {
     volume   "Arch Linux"
     loader   /vmlinuz-linux
     initrd   /initramfs-linux.img
-    options  "root=PARTUUID=df4a184d-c181-47aa-aa54-6f00a5400cfd rw add_efi_memmap"
+    options  "root=PARTUUID=df4a184d-c181-47aa-aa54-6f00a5400cfd rw add_efi_memmap quiet splash"
     graphics  on
-    submenuentry "Boot using fallback initramfs" {
-        initrd initramfs-linux-fallback.img
-    }
-    submenuentry "Boot to terminal" {
-        add_options "systemd.unit=multi-user.target"
-    }
 }
 
 menuentry "Windows 11" {
@@ -28,7 +22,6 @@ menuentry "Windows 11" {
 }
 
 banner_scale noscale
-# small_icon_size  144
 big_icon_size    120
 mouse_size 32
 hideui singleuser,hints,arrows,label,badges
