chore(gammastep): adjust lont and lat

--- a/.config/gammastep/config.ini
+++ b/.config/gammastep/config.ini
@@ -55,8 +55,8 @@ adjustment-method=wayland
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
 [manual]
-lat=0.526596
-lon=0.526596
+lat=1.2033996035846188
+lon=-77.27524860954428
 
 ; Configuration of the adjustment-method
 ; type 'gammastep -m METHOD:help' to see the settings.
